--- a/Frontend/html/add-event-page.html
+++ b/Frontend/html/add-event-page.html
@@ -76,10 +76,21 @@
                             <label class="visually-hidden" for="max-rang-select">Макс. ранг</label>
                             <select class="max-rang" title="Максимальный ранг" name="max-rang" id="max-rang-select">
                                 <option value="">-- Макс. ранг --</option>
-                                <option value="6kyu">КАКИЕ ЕСТЬ</option>
-                                <option value="5kyu">ОГРАНИЧЕНИЯ</option>
-                                <option value="4kyu">ПО</option>
-                                <option value="3kyu">РАНГАМ?</option>
+                                <option value="5kyu">5 кю</option>
+                                <option value="4kyu">4 кю</option>
+                                <option value="3kyu">3 кю</option>
+                                <option value="2kyu">2 кю</option>
+                                <option value="1kyu">1 кю</option>
+                                <option value="1dan">1 дан</option>
+                                <option value="2dan">2 дан</option>
+                                <option value="3dan">3 дан</option>
+                                <option value="4dan">4 дан</option>
+                                <option value="5dan">5 дан</option>
+                                <option value="6dan">6 дан</option>
+                                <option value="7dan">7 дан</option>
+                                <option value="8dan">8 дан</option>
+                                <option value="9dan">9 дан</option>
+
                             </select>
                         </div>
                     </section>
@@ -130,13 +141,12 @@
                                 </label>
                             </div>
                         </div>
-                        <!--
                         <div class="event-poster">
                             <label class="icon-field" title="Поле загрузки афиши мероприятия">
-                                <input type="file" name="event-poster" id="event-poster" accept="image/jpeg, image/png">
-                                <img src="../assets/empty-poster.png" id="event-poster-preview" alt="Афиша мероприятия" >
+                                <input type="file" name="event-poster" id="event-poster" accept="image/jpeg, image/png" disabled>
+                                <img src="../assets/fon_nophoto.png" id="event-poster-preview" alt="Афиша мероприятия" >
                             </label>
-                        </div> -->
+                        </div>
                     </section>
                     <section>
                         <h2>Контакты организатора</h2>
