--- a/Frontend/html/add-event-page.html
+++ b/Frontend/html/add-event-page.html
@@ -97,7 +97,7 @@
                                 </label>
                             </div>
                             <label class="icon-field" title="Поле загрузки логотипа клуба">
-                                <input type="file" name="coach-icon" id="logo-icon" accept="image/jpeg, image/png">
+                                <input type="file" name="logo-icon" id="logo-icon" accept="image/jpeg, image/png">
                                 <img src="../assets/empty-club-icon.png" id="logo-icon-preview" alt="Логотип клуба" height="100%">
                             </label>
                             <div class="image-offset">
