--- a/Frontend/html/add-event-page.html
+++ b/Frontend/html/add-event-page.html
@@ -2,6 +2,7 @@
 <html lang="ru">
     <head>
         <meta charset="UTF-8">
+        <script src="../js/go-to-auth-error-enter.js"></script>
         <script src="https://api-maps.yandex.ru/2.1/?apikey=1fc42576-f294-4305-baaf-9c78e6b88dcc&lang=ru_RU"
                 type="text/javascript">
         </script>
