--- a/Frontend/html/clubs.html
+++ b/Frontend/html/clubs.html
@@ -10,24 +10,12 @@
     <div class="content">
         <br>
         <h1 class="title">Клубы</h1>
-        <div class="bordered-container card">
-            <div class="ro">
-                <img src="../assets/clubs_logo/Praim.png">
-                <div class="inf-list">
-                    <p class="club_name">Прайм</p>
-                    <p class="city">г.Екатеринбург</p>
-                    <p class="region">Свердловская область</p>
-                    <p class="fio">Некто Нектович Нектов</p>
-                </div>
-            </div>
-            <div class="po">
-                <button type="button" class="deleteBut" name="delete">Удалить</button>
-                <button type="button" class="editBut" name="edit">Редактировать</button>
-            </div>
-        </div>
+<!--        Clubs cards is here and loading by JS-->
         <button type="button" class="add_club" name="add">Добавить клуб</button>
     </div>
 
 </body>
+<script src="../js/getJsonFromServer.js"></script>
+<script src="../js/clubs-script.js"></script>
 <script src="../js/menu-inserting.js"></script>
 </html>
