Подключены страницы списка клубов и страница создания клуба

--- a/Frontend/html/club_creating.html
+++ b/Frontend/html/club_creating.html
@@ -33,4 +33,5 @@
 </body>
 <script src="../js/menu-inserting.js"></script>
 <script src="../js/club-creation-script.js"></script>
+<script src="../js/postWithoutAnswer.js"></script>
 </html>
