--- a/Frontend/html/clubs.html
+++ b/Frontend/html/clubs.html
@@ -11,11 +11,10 @@
         <br>
         <h1 class="title">Клубы</h1>
 <!--        Clubs cards is here and loading by JS-->
-        <button type="button" class="add_club" name="add">Добавить клуб</button>
+        <a href="club_creating.html" style="text-decoration: none"><button type="button" class="add_club" name="add">Добавить клуб</button></a>
     </div>
 
 </body>
-<script src="../js/getJsonFromServer.js"></script>
 <script src="../js/clubs-script.js"></script>
 <script src="../js/menu-inserting.js"></script>
 </html>
