--- a/Frontend/html/admin-main-page.html
+++ b/Frontend/html/admin-main-page.html
@@ -15,7 +15,7 @@
     <div class="container content center-block vh-100 d-flex flex-wrap">
         <a class="category col-12 col-md-3 h-100" href="#">Тренеры</a>
         <a class="category col-12 col-md-3 h-100" href="#">Мероприятия</a>
-        <a class="category col-12 col-md-3 h-100" href="#">Клубы</a>
+        <a class="category col-12 col-md-3 h-100" href="clubs.html">Клубы</a>
     </div>
 </div>
 </body>
