Исправлен баг списка клубов
Исправлен баг из-за которого при нажатии на карточку клуба был переход на страницу создания клуба

--- a/Frontend/html/clubs.html
+++ b/Frontend/html/clubs.html
@@ -11,7 +11,7 @@
         <br>
         <h1 class="title">Клубы</h1>
 <!--        Clubs cards is here and loading by JS-->
-        <a href="club_creating.html" style="text-decoration: none"><button type="button" class="add_club" name="add">Добавить клуб</button></a>
+        <button type="button" class="add_club" name="add" onclick="location.href = '../html/club_creating.html'">Добавить клуб</button>
     </div>
 
 </body>
