--- a/Frontend/html/add-event-page.html
+++ b/Frontend/html/add-event-page.html
@@ -64,7 +64,6 @@
                         </div>
                     </section>
 
-                    <!-- Придумать структуру блока "Расписание мероприятия"-->
                     <section>
                         <h2>Расписание мероприятия</h2>
                         <label class="visually-hidden" for="participant-category">Категория</label>
@@ -83,8 +82,8 @@
                                 <button type="button" class="add-schedule-butt" title="Добавить время" name="add-time-butt" id="add-time">+</button>
                             </div>
                         </div>
+                        <h6>Чтобы лишняя ячейка не вошла в итоговое расписание — оставьте её пустой.</h6>
                     </section>
-                    <!-- Придумать структуру блока "Расписание мероприятия"-->
 
                     <section>
                         <h2>Афиша мероприятия</h2>
