--- a/Frontend/html/add-event-page.html
+++ b/Frontend/html/add-event-page.html
@@ -136,8 +136,8 @@
             </div>
         </main>
         <script src="../js/menu-inserting.js"></script>
-        <script src="../js/add-event-page-script.js"></script>
-        <script src="../js/add-event-schedule.js"></script>
+        <script type="module" src="../js/add-event-page-script.js"></script>
+        <script type="module" src="../js/add-event-schedule.js"></script>
     </body>
 </html>
 
