--- a/Frontend/html/club_editing.html
+++ b/Frontend/html/club_editing.html
@@ -25,14 +25,16 @@
                 <button class="add" onclick="addMoreCoach()">+</button>
             </div>
             <div class="button-block">
-                <button class="send-button" id="send-button" >Добавить клуб</button>
+                <button class="send-button" id="send-button" onclick="sendUpdatedInfo()">Сохранить</button>
                 <p class="error-message hidden" id="error-message">Введены не все данные</p>
             </div>
         </div>
     </div>
 </body>
 <script src="../js/menu-inserting.js"></script>
-<script src="../js/club-creation-script.js"></script>
-<script src="../js/club-editing-script.js"></script>
 <script src="../js/postWithoutAnswer.js"></script>
+<script src="../js/getRequest.js"></script>
+<script src="../js/club-editing.js"></script>
+<script src="../js/club-creation-script.js"></script>
+
 </html>
