Подключена страница создания тренера

--- a/Frontend/html/add_new_trainer.html
+++ b/Frontend/html/add_new_trainer.html
@@ -23,20 +23,20 @@
             <input type="date" placeholder="Дата рождения" class="base-info" id="birthdate" onchange="hideErrorMessage()">
             <select class="base-info-selectors" id="rank-selector" onchange="hideErrorMessage()">
                 <option value="none" selected>Степень</option>
-                <option value="5ku">5 кю</option>
-                <option value="4ku">4 кю</option>
-                <option value="3ku">3 кю</option>
-                <option value="2ku">2 кю</option>
-                <option value="1ku">1 кю</option>
-                <option value="2dan">1 дан</option>
-                <option value="3dan">2 дан</option>
-                <option value="4dan">3 дан</option>
-                <option value="5dan">4 дан</option>
-                <option value="6dan">5 дан</option>
-                <option value="7dan">6 дан</option>
-                <option value="8dan">7 дан</option>
-                <option value="9dan">8 дан</option>
-                <option value="10dan">9 дан</option>
+                <option value="5">5 кю</option>
+                <option value="4">4 кю</option>
+                <option value="3">3 кю</option>
+                <option value="2">2 кю</option>
+                <option value="1">1 кю</option>
+                <option value="11">1 дан</option>
+                <option value="12">2 дан</option>
+                <option value="13">3 дан</option>
+                <option value="14">4 дан</option>
+                <option value="15">5 дан</option>
+                <option value="16">6 дан</option>
+                <option value="17">7 дан</option>
+                <option value="18">8 дан</option>
+                <option value="19">9 дан</option>
 
             </select>
             <input type="date" class="base-info" id="attestation-date" onchange="hideErrorMessage()">
