--- a/Frontend/html/admin-main-page.html
+++ b/Frontend/html/admin-main-page.html
@@ -13,7 +13,7 @@
 <div class="wrapper abc">
 
     <div class="container content center-block vh-100 d-flex flex-wrap">
-        <a class="category col-12 col-md-3 h-100" href="#">Тренеры</a>
+        <a class="category col-12 col-md-3 h-100" href="federation_coaches.html">Тренеры</a>
         <a class="category col-12 col-md-3 h-100" href="admin-page-main.html">Мероприятия</a>
         <a class="category col-12 col-md-3 h-100" href="clubs.html">Клубы</a>
     </div>
