--- a/Frontend/html/federation_coaches.html
+++ b/Frontend/html/federation_coaches.html
@@ -32,6 +32,7 @@
 
 </body>
 <script src="../js/postWithoutAnswer.js"></script>
-<script src="federation-coaches.js"></script>
+<script src="../js/getRequest.js"></script>
+<script src="../js/federation-coaches.js"></script>
 <script src="../js/menu-inserting.js"></script>
 </html>
